@@ -1,0 +1,2 @@
+[Service]
+LimitNOFILE=16768
